@@ -44,7 +44,8 @@
 
 function hold (varargin)
 
-  if (nargin > 0 && numel (varargin{1}) == 1 && ishandle (varargin{1}(1)))
+  if (nargin > 0 && numel (varargin{1}) == 1 && ishandle (varargin{1}(1))
+      && strcmp (get (varargin{1}, "type"), "axes"))
     [h, varargin, nargs] = __plt_get_axis_arg__ ("hold", varargin{:});
   elseif (nargin > 0 && numel (varargin{1}) > 1 && ishandle (varargin{1}(1)))
     print_usage ();
